[package]
name = "poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["png", "jpeg", "mp3", "vorbis"] }
bevy_asset_loader = { version = "0.18.0", features = ["2d"] }
bevy_ggrs = { version = "0.14.0", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.8.0", features = ["ggrs"] }
serde = "1.0.193"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
